# logical

./: CMakeLists.txt  README.md  expression.hpp  func_evaluator.hpp  name.mv  var_evaluator.hpp
include/: base_evaluator.hpp  expression.hpp  func_evaluator.hpp  var_evaluator.hpp
include/logic/: build_proxy.hpp  constants.hpp  dense_matrix.hpp  functors.hpp  iterator.hpp  matrix_factory.hpp  matrix_functions.hpp  matrix_operations.hpp  operator_priorities.hpp  recursator.hpp  scalar.hpp  sparse_matrix.hpp  string.hpp  string_matrix.hpp  vectors.hpp  virtual_matrix.hpp  virtual_recursator.hpp
include/util/: complex.hpp  error_propagator.hpp  file.hpp  info_auto_ptr.hpp  list.hpp  map.hpp  string.hpp
logic/: algorithms.hpp  matrix.hpp  matrix_functions.hpp  matrix_operations.hpp  operations.hpp  operator_priorities.hpp  scalar.hpp  string.hpp  upper_triangular.hpp  virtual_matrix.hpp  virtual_recursator.hpp
src/: logical_core.cpp  test_prompt.cpp
util/: convenience.hpp  file.hpp  info_auto_ptr.hpp  list.hpp  map.hpp  string.hpp
